# user-api-fastapi

./: .gitignore  .tool-versions  Makefile  README.md  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.js  UserForm.js  UserList.js
tests/: conftest.py  test_models.py  test_routers.py  test_utils.py  test_weather_client.py
tests/cassettes/: bad_zip.yaml  nonexistent_zip.yaml  valid_zip.yaml
users/: client.py  firebase.py  geocode.py  models.py  router.py  settings.py  utils.py
